--- a/Blinkit/LoginCustomers.html
+++ b/Blinkit/LoginCustomers.html
@@ -6,22 +6,7 @@
     <title>Customer Login</title>
 </head>
 <body>
-        <fieldset>
-            <legend>Customer Detail</legend>
-            <form action="connect.php" method="post">
-            <p>First name<input type="text" name="first_name" id="fname" required="required"></p>
-            <p>Middle name<input type="text" name="second_name" id="sname"></p>
-            <p>Last  name<input type="text" name="last_name" id="lname" required="required"></p>
-            <p>Date of Birth <input type="date" name="CustDOB" id="custdate" required="required"></p>
-            <p>Age <input type="text" name="age" id="age_id"></p>
-            <p>Street Number <input type="text" name="street_number" id="streetid" required="required"></p>
-            <p>LandMark <input type="text" name="landmark" id="landmark" required="required"></p>
-            <p>City <input type="text" name="city" id="cityid" required="required"></p>
-            <p>Pincode <input type="text" name="pincode" id="pincodeid" maxlength="6" required="required"></p>
-            <p>State <input type="text" name="state" id="stateid" required="required"></p>
-            <p>Contact <input type="text" name="contact" id="contactid" required="required"></p>
-            <p><input type="submit" name="submit" id="submitid"></p>
-        </form>
-        </fieldset>
+       <p> <a href="signincustomer.html">Sign In</a></p>
+       <p> <a href="logincustomer.html"> Log In</a></p>
 </body>
 </html>
