--- a/Blinkit/LoginEmployee.html
+++ b/Blinkit/LoginEmployee.html
@@ -3,38 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Employee Login</title>
+    <title>Customer Login</title>
 </head>
 <body>
-    <fieldset>
-        <!-- ,EmployeePost ENUM("Delivery Man", "Manager", "Packaging Man", "Worker" , "Head Employee") default 'Worker',
-WorkingStatus ENUM("Busy", "Free" , "on holiday", "Working") default 'Working', -->
-        <legend>Employee Details Detail</legend>
-        <form action="" method="post">
-        <p>First name<input type="text" name="first_name" id="fname" required="required"></p>
-        <p>Middle name<input type="text" name="second_name" id="sname"></p>
-        <p>Last  name<input type="text" name="last_name" id="lname" required="required"></p>
-        <p>Adhaar Number<input type="text" name="adhaar_number" id="adhaar_numberid" required="required"></p>
-        <p>Email <input type="email" name="email" id="emailid"></p>
-        <p>Joining Date <input type="date" name="joindate" id="joindateid" required="required"></p>
-        <p>Leaving Date <input type="date" name="leavedate" id="leavedateid"></p>
-        <p>Contact <input type="text" name="contact" id="contactid" required="required"></p>
-        <p>Select  post:    
-            <select name="post" id="postid">
-                <option value="worker" >Worker</option>
-                <option value="dman">Delivery Man</option>
-                <option value="manager">Manager</option>
-                <option value="packagingmen">Packaging Man</option>
-                <option value="heademployee">Head Employee</option>
-            </select></p>
-        <p>Current Working Status
-        <p><input type="radio" name="workingstatus" id="workingid" value="working" checked>Working</p>
-        <p><input type="radio" name="workingstatus" id="busyid" value="busy">Busy</p>
-        <p><input type="radio" name="workingstatus" id="holidayid" value="on_holiday">On holiday</p>
-        </p>
-        <p><input type="submit" name="submit" id="submitid"></p>
-    </form>
-    </fieldset>
-    
+       <p> <a href="signinemployee.html">Sign In</a></p>
+       <p> <a href="loginemployeee.html"> Log In</a></p>
 </body>
 </html>
