--- a/Blinkit/logincustomer.html
+++ b/Blinkit/logincustomer.html
@@ -7,7 +7,8 @@
 </head>
 <body>
         <fieldset>
-            <legend>Customer Detail</legend>
+            <legend>Customer Log in Detail</legend>
+            <form action="logincustomer.php" method="post" >
             <p>Contact <input type="text" name="contact" id="contactid" required="required"></p>
             <p><input type="submit" name="submit" id="submitid"></p>
         </form>
