--- a/Blinkit/LoginEmployee.html
+++ b/Blinkit/LoginEmployee.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Customer Login</title>
+    <title>Employee Signin / Log in</title>
 </head>
 <body>
        <p> <a href="signinemployee.html">Sign In</a></p>
