--- a/Blinkit/For company/homeforemp.html
+++ b/Blinkit/For company/homeforemp.html
@@ -7,8 +7,6 @@
   </head>
   <body>
     <fieldset>
-      <!-- ,EmployeePost ENUM("Delivery Man", "Manager", "Packaging Man", "Worker" , "Head Employee") default 'Worker',
-WorkingStatus ENUM("Busy", "Free" , "on holiday", "Working") default 'Working', -->
       <legend>Employee Details Detail</legend>
       <form action="homeforemp.php" method="post">
         <h1>What you want to add/change</h1>
@@ -21,6 +19,7 @@ WorkingStatus ENUM("Busy", "Free" , "on holiday", "Working") default 'Working', 
             <option value="product">Product</option>
             <option value="productcatergory">Product Category</option>
             <option value="warehouse">Warehouse</option>
+            <option value="branch">Branch</option>
           </select>
         </p>
         <p><input type="submit" name="submit" id="submitid"></p>
