--- a/Blinkit/homepage.html
+++ b/Blinkit/homepage.html
@@ -35,6 +35,12 @@
             <span><img src="cartIcon2.png" alt="carticon2" id="cart-id-2" height="53vh" width="70vw"></span>
           </a>
         </span>
+        <a href="For company/Cart/cart.html" id="cart-id">
+        <div id="showinfo">
+          <div id="cart-item-count"></div>
+          <div id="cart-item-finalR"></div>
+        </div>
+      </a>
     </header>
     <main id="main_id">
     <article id="restcontent">
@@ -318,7 +324,7 @@
           <img src="timer.JPG" class="timer-class" alt="timer" height="15vh" width="55vw">
           <p class="product-option-name">Harvest Gold 100% Atta Whole Wheat Bread</p>
           <p class="quantity-class">400g</p>
-          <p class="original-ruppes">&#8377 50<button  type="button" class="add-button-class">ADD</button></p>
+           <p class="original-ruppes">&#8377 50<button  type="button" class="add-button-class">ADD</button><span class="to-add-remove"> <button class="to-subtract"><img src="-sign.JPG" alt="-" width="22vw" height="33vh"></button><span class="current-quantity"></span> <button class="to-add"><img src="+sign.JPG" alt="+" width="22vw" height="32vh"></button></span></p> 
           <p><s class="old-ruppee"></s> </p> 
           </a>
         </div>
@@ -328,7 +334,7 @@
           <img src="timer.JPG" class="timer-class" alt="timer" height="15vh" width="55vw">
           <p class="product-option-name">Amul Fresh Malai Paneer</p>
           <p class="quantity-class">200g</p>
-          <p class="original-ruppes">&#8377 91 <button  type="button" class="add-button-class">ADD</button></p>
+          <p class="original-ruppes">&#8377 91 <button  type="button" class="add-button-class">ADD</button><span class="to-add-remove"> <button class="to-subtract"><img src="-sign.JPG" alt="-" width="22vw" height="33vh"></button><span class="current-quantity"></span> <button class="to-add"><img src="+sign.JPG" alt="+" width="22vw" height="32vh"></button></span></p>
           <p> <s class="old-ruppee"></s></p> 
         </a>
         </div>
@@ -338,8 +344,8 @@
           <img src="timer.JPG" class="timer-class" alt="timer" height="15vh" width="55vw">
           <p class="product-option-name">Amul Masti Curd</p>
           <p class="quantity-class">400g</p>
-          <p class="original-ruppes">&#8377 35<button  type="button" class="add-button-class">ADD</button></p>
-          <p><s class="old-ruppee"></s> </p> 
+          <p class="original-ruppes">&#8377 35<button  type="button" class="add-button-class">ADD</button><span class="to-add-remove"> <button class="to-subtract"><img src="-sign.JPG" alt="-" width="22vw" height="33vh"></button><span class="current-quantity"></span> <button class="to-add"><img src="+sign.JPG" alt="+" width="22vw" height="32vh"></button></span></p> 
+          <p><s class="old-ruppee">46</s> </p> 
         </a>
         </div>
         <div class="Option-class">
@@ -348,7 +354,7 @@
           <img src="timer.JPG" class="timer-class" alt="timer" height="15vh" width="55vw">
           <p class="product-option-name">Amul Pure Milk Cheese Slices</p>
           <p class="quantity-class">200g</p>
-          <p class="original-ruppes">&#8377 141<button  type="button" class="add-button-class">ADD</button></p>
+          <p class="original-ruppes">&#8377 141<button  type="button" class="add-button-class">ADD</button><span class="to-add-remove"> <button class="to-subtract"><img src="-sign.JPG" alt="-" width="22vw" height="33vh"></button><span class="current-quantity"></span> <button class="to-add"><img src="+sign.JPG" alt="+" width="22vw" height="32vh"></button></span></p>
           <p><s class="old-ruppee">&#8377 145</s> </p> 
         </a>
         </div>
@@ -358,7 +364,7 @@
           <img src="timer.JPG" class="timer-class" alt="timer" height="15vh" width="55vw">
           <p class="product-option-name">Table White White Eggs(6 pieces)</p>
           <p class="quantity-class">6 pieces</p>
-          <p class="original-ruppes">&#8377 52<button  type="button" class="add-button-class">ADD</button></p>
+          <p class="original-ruppes">&#8377 52<button  type="button" class="add-button-class">ADD</button><span class="to-add-remove"> <button class="to-subtract"><img src="-sign.JPG" alt="-" width="22vw" height="33vh"></button><span class="current-quantity"></span> <button class="to-add"><img src="+sign.JPG" alt="+" width="22vw" height="32vh"></button></span></p>
           <p><s class="old-ruppee">&#8377 85</s> </p> 
         </a>
         </div>
@@ -368,7 +374,7 @@
           <img src="timer.JPG" class="timer-class" alt="timer" height="15vh" width="55vw">
           <p class="product-option-name">Amul Mithai Mate</p>
           <p class="quantity-class">200g</p>
-          <p class="original-ruppes">&#8377 66<button  type="button" class="add-button-class">ADD</button></p>
+          <p class="original-ruppes">&#8377 66<button  type="button" class="add-button-class">ADD</button><span class="to-add-remove"> <button class="to-subtract"><img src="-sign.JPG" alt="-" width="22vw" height="33vh"></button><span class="current-quantity"></span> <button class="to-add"><img src="+sign.JPG" alt="+" width="22vw" height="32vh"></button></span></p>
           <p><s class="old-ruppee"></s> </p> 
         </a>
         </div>
@@ -378,7 +384,7 @@
           <img src="timer.JPG" class="timer-class" alt="timer" height="15vh" width="55vw">
           <p class="product-option-name">Mother Dairy Classic Curd</p>
           <p class="quantity-class">400g</p>
-          <p class="original-ruppes">&#8377 34<button  type="button" class="add-button-class">ADD</button></p>
+          <p class="original-ruppes">&#8377 34<button  type="button" class="add-button-class">ADD</button><span class="to-add-remove"> <button class="to-subtract"><img src="-sign.JPG" alt="-" width="22vw" height="33vh"></button><span class="current-quantity"></span> <button class="to-add"><img src="+sign.JPG" alt="+" width="22vw" height="32vh"></button></span></p>
           <p><s class="old-ruppee"></s> </p> 
         </a>
         </div>
@@ -388,7 +394,7 @@
           <img src="timer.JPG" class="timer-class" alt="timer" height="15vh" width="55vw">
           <p class="product-option-name">Mother Dairy Paneer</p>
           <p class="quantity-class">200g</p>
-          <p class="original-ruppes">&#8377 95<button  type="button" class="add-button-class">ADD</button></p>
+          <p class="original-ruppes">&#8377 95<button  type="button" class="add-button-class">ADD</button><span class="to-add-remove"> <button class="to-subtract"><img src="-sign.JPG" alt="-" width="22vw" height="33vh"></button><span class="current-quantity"></span> <button class="to-add"><img src="+sign.JPG" alt="+" width="22vw" height="32vh"></button></span></p>
           <p><s class="old-ruppee"></s> </p> 
         </a>
         </div>
@@ -402,7 +408,7 @@
           <img src="timer.JPG" class="timer-class" alt="timer" height="15vh" width="55vw">
           <p class="product-option-name">Haldiram's Bhujia</p>
           <p class="quantity-class">400g</p>
-          <p class="original-ruppes">&#8377 111<button  type="button" class="add-button-class">ADD</button></p>
+          <p class="original-ruppes">&#8377 111<button  type="button" class="add-button-class">ADD</button><span class="to-add-remove"> <button class="to-subtract"><img src="-sign.JPG" alt="-" width="22vw" height="33vh"></button><span class="current-quantity"></span> <button class="to-add"><img src="+sign.JPG" alt="+" width="22vw" height="32vh"></button></span></p>
           <p><s class="old-ruppee"></s> </p> 
         </a>
         </div>
@@ -412,7 +418,7 @@
           <img src="timer.JPG" class="timer-class" alt="timer" height="15vh" width="55vw">
           <p class="product-option-name">Lay's India's Magic Masala Potato Chips (40 g)</p>
           <p class="quantity-class">40g</p>
-          <p class="original-ruppes">&#8377 20<button  type="button" class="add-button-class">ADD</button></p>
+          <p class="original-ruppes">&#8377 20<button  type="button" class="add-button-class">ADD</button><span class="to-add-remove"> <button class="to-subtract"><img src="-sign.JPG" alt="-" width="22vw" height="33vh"></button><span class="current-quantity"></span> <button class="to-add"><img src="+sign.JPG" alt="+" width="22vw" height="32vh"></button></span></p>
           <p><s class="old-ruppee"></s> </p> 
         </a>
           
@@ -423,7 +429,7 @@
           <img src="timer.JPG" class="timer-class" alt="timer" height="15vh" width="55vw">
           <p class="product-option-name">Haldiram's Classic Salted Peanuts-Pack of 2</p>
           <p class="quantity-class">2 X 200g</p>
-          <p class="original-ruppes">&#8377 103<button  type="button" class="add-button-class">ADD</button></p>
+          <p class="original-ruppes">&#8377 103<button  type="button" class="add-button-class">ADD</button><span class="to-add-remove"> <button class="to-subtract"><img src="-sign.JPG" alt="-" width="22vw" height="33vh"></button><span class="current-quantity"></span> <button class="to-add"><img src="+sign.JPG" alt="+" width="22vw" height="32vh"></button></span></p>
           <p><s class="old-ruppee">&#8377 108</s> </p> 
         </a>
         </div>
@@ -433,7 +439,7 @@
           <img src="timer.JPG" class="timer-class" alt="timer" height="15vh" width="55vw">
           <p class="product-option-name">Doritos Cheese Nachos</p>
           <p class="quantity-class">60g</p>
-          <p class="original-ruppes">&#8377 30<button  type="button" class="add-button-class">ADD</button></p>
+          <p class="original-ruppes">&#8377 30<button  type="button" class="add-button-class">ADD</button><span class="to-add-remove"> <button class="to-subtract"><img src="-sign.JPG" alt="-" width="22vw" height="33vh"></button><span class="current-quantity"></span> <button class="to-add"><img src="+sign.JPG" alt="+" width="22vw" height="32vh"></button></span></p>
           <p><s class="old-ruppee"></s> </p> 
         </a>
         </div>
@@ -443,7 +449,7 @@
           <img src="timer.JPG" class="timer-class" alt="timer" height="15vh" width="55vw">
           <p class="product-option-name">Haldiram's Lite Mixture Namkeen</p>
           <p class="quantity-class">150g</p>
-          <p class="original-ruppes">&#8377 35<button  type="button" class="add-button-class">ADD</button></p>
+          <p class="original-ruppes">&#8377 35<button  type="button" class="add-button-class">ADD</button><span class="to-add-remove"> <button class="to-subtract"><img src="-sign.JPG" alt="-" width="22vw" height="33vh"></button><span class="current-quantity"></span> <button class="to-add"><img src="+sign.JPG" alt="+" width="22vw" height="32vh"></button></span></p>
           <p><s class="old-ruppee"></s> </p> 
         </a>
         </div>
@@ -453,7 +459,7 @@
           <img src="timer.JPG" class="timer-class" alt="timer" height="15vh" width="55vw">
           <p class="product-option-name">Haldiram's Boondi - Pack of 2</p>
           <p class="quantity-class">2 X 220g</p>
-          <p class="original-ruppes">&#8377 99<button  type="button" class="add-button-class">ADD</button></p>
+          <p class="original-ruppes">&#8377 99<button  type="button" class="add-button-class">ADD</button><span class="to-add-remove"> <button class="to-subtract"><img src="-sign.JPG" alt="-" width="22vw" height="33vh"></button><span class="current-quantity"></span> <button class="to-add"><img src="+sign.JPG" alt="+" width="22vw" height="32vh"></button></span></p>
           <p><s class="old-ruppee">&#8377 104</s> </p> 
         </a>
         </div>
@@ -463,7 +469,7 @@
           <img src="timer.JPG" class="timer-class" alt="timer" height="15vh" width="55vw">
           <p class="product-option-name">Uncle Chipps Spicy Treat Flavour Potato Chips</p>
           <p class="quantity-class">50g</p>
-          <p class="original-ruppes">&#8377 20<button  type="button" class="add-button-class">ADD</button></p>
+          <p class="original-ruppes">&#8377 20<button  type="button" class="add-button-class">ADD</button><span class="to-add-remove"> <button class="to-subtract"><img src="-sign.JPG" alt="-" width="22vw" height="33vh"></button><span class="current-quantity"></span> <button class="to-add"><img src="+sign.JPG" alt="+" width="22vw" height="32vh"></button></span></p>
           <p><s class="old-ruppee"></s> </p> 
         </a>
         </div>
@@ -473,7 +479,7 @@
           <img src="timer.JPG" class="timer-class" alt="timer" height="15vh" width="55vw">
           <p class="product-option-name">Cheetos Flamin' Hot Twisted Corn Puffs</p>
           <p class="quantity-class">84g</p>
-          <p class="original-ruppes">&#8377 40<button  type="button" class="add-button-class">ADD</button></p>
+          <p class="original-ruppes">&#8377 40<button  type="button" class="add-button-class">ADD</button><span class="to-add-remove"> <button class="to-subtract"><img src="-sign.JPG" alt="-" width="22vw" height="33vh"></button><span class="current-quantity"></span> <button class="to-add"><img src="+sign.JPG" alt="+" width="22vw" height="32vh"></button></span></p>
           <p><s class="old-ruppee">&#8377 50</s> </p> 
         </a>
         </div>
@@ -488,7 +494,7 @@
           <p class="product-option-name">Hamdard Rooh Afza Rose Sharbat</p>
           <p class="quantity-class">750 ml</p>
           <p class="original-ruppes">&#8377 175</p>
-          <p><s class="old-ruppee"></s> <button  type="button" class="add-button-class">ADD</button></p>
+          <p><s class="old-ruppee"></s> <button  type="button" class="add-button-class">ADD</button><span class="to-add-remove"> <button class="to-subtract"><img src="-sign.JPG" alt="-" width="22vw" height="33vh"></button><span class="current-quantity"></span> <button class="to-add"><img src="+sign.JPG" alt="+" width="22vw" height="32vh"></button></span></p>
         </a> 
         </div>
         <div class="Option-class">
@@ -497,7 +503,7 @@
           <img src="timer.JPG" class="timer-class" alt="timer" height="15vh" width="55vw">
           <p class="product-option-name">Bisleri Packaged Water</p>
           <p class="quantity-class">5 l</p>
-          <p class="original-ruppes">&#8377 70<button  type="button" class="add-button-class">ADD</button></p>
+          <p class="original-ruppes">&#8377 70<button  type="button" class="add-button-class">ADD</button><span class="to-add-remove"> <button class="to-subtract"><img src="-sign.JPG" alt="-" width="22vw" height="33vh"></button><span class="current-quantity"></span> <button class="to-add"><img src="+sign.JPG" alt="+" width="22vw" height="32vh"></button></span></p>
           <p><s class="old-ruppee"></s> </p> 
         </a> 
         </div>
@@ -507,7 +513,7 @@
           <img src="timer.JPG" class="timer-class" alt="timer" height="15vh" width="55vw">
           <p class="product-option-name">Real Fruit Power Coconut Water</p>
           <p class="quantity-class">1 l</p>
-          <p class="original-ruppes">&#8377 107<button  type="button" class="add-button-class">ADD</button></p>
+          <p class="original-ruppes">&#8377 107<button  type="button" class="add-button-class">ADD</button><span class="to-add-remove"> <button class="to-subtract"><img src="-sign.JPG" alt="-" width="22vw" height="33vh"></button><span class="current-quantity"></span> <button class="to-add"><img src="+sign.JPG" alt="+" width="22vw" height="32vh"></button></span></p>
           <p><s class="old-ruppee">&#8377 170</s> </p> 
         </a>
         </div>
@@ -517,7 +523,7 @@
           <img src="timer.JPG" class="timer-class" alt="timer" height="15vh" width="55vw">
           <p class="product-option-name">Red Bull Energy Drink (250 ml)</p>
           <p class="quantity-class">250 ml</p>
-          <p class="original-ruppes">&#8377 125<button  type="button" class="add-button-class">ADD</button></p>
+          <p class="original-ruppes">&#8377 125<button  type="button" class="add-button-class">ADD</button><span class="to-add-remove"> <button class="to-subtract"><img src="-sign.JPG" alt="-" width="22vw" height="33vh"></button><span class="current-quantity"></span> <button class="to-add"><img src="+sign.JPG" alt="+" width="22vw" height="32vh"></button></span></p>
           <p><s class="old-ruppee"></s> </p> 
         </a>
         </div>
@@ -527,7 +533,7 @@
           <img src="timer.JPG" class="timer-class" alt="timer" height="15vh" width="55vw">
           <p class="product-option-name">Minute Maid Pulpy Orange Fruit Drink</p>
           <p class="quantity-class">1 l</p>
-          <p class="original-ruppes">&#8377 86<button  type="button" class="add-button-class">ADD</button></p>
+          <p class="original-ruppes">&#8377 86<button  type="button" class="add-button-class">ADD</button><span class="to-add-remove"> <button class="to-subtract"><img src="-sign.JPG" alt="-" width="22vw" height="33vh"></button><span class="current-quantity"></span> <button class="to-add"><img src="+sign.JPG" alt="+" width="22vw" height="32vh"></button></span></p>
           <p><s class="old-ruppee">&#8377 90</s> </p> 
         </a>
         </div>
@@ -537,7 +543,7 @@
           <img src="timer.JPG" class="timer-class" alt="timer" height="15vh" width="55vw">
           <p class="product-option-name">Coca-Cola Soft Drink (750 ml)</p>
           <p class="quantity-class">750 ml</p>
-          <p class="original-ruppes">&#8377 40<button  type="button" class="add-button-class">ADD</button></p>
+          <p class="original-ruppes">&#8377 40<button  type="button" class="add-button-class">ADD</button><span class="to-add-remove"> <button class="to-subtract"><img src="-sign.JPG" alt="-" width="22vw" height="33vh"></button><span class="current-quantity"></span> <button class="to-add"><img src="+sign.JPG" alt="+" width="22vw" height="32vh"></button></span></p>
           <p><s class="old-ruppee">&#8377 145</s> </p> 
         </a>
         </div>
@@ -547,7 +553,7 @@
           <img src="timer.JPG" class="timer-class" alt="timer" height="15vh" width="55vw">
           <p class="product-option-name">Maaza Mango Drink 600 ml</p>
           <p class="quantity-class">600 ml</p>
-          <p class="original-ruppes">&#8377 40<button  type="button" class="add-button-class">ADD</button></p>
+          <p class="original-ruppes">&#8377 40<button  type="button" class="add-button-class">ADD</button><span class="to-add-remove"> <button class="to-subtract"><img src="-sign.JPG" alt="-" width="22vw" height="33vh"></button><span class="current-quantity"></span> <button class="to-add"><img src="+sign.JPG" alt="+" width="22vw" height="32vh"></button></span></p>
           <p><s class="old-ruppee"></s> </p> 
         </a>
         </div>
@@ -557,7 +563,7 @@
           <img src="timer.JPG" class="timer-class" alt="timer" height="15vh" width="55vw">
           <p class="product-option-name">Bisleri Soda Water</p>
           <p class="quantity-class">750 ml</p>
-          <p class="original-ruppes">&#8377 20<button  type="button" class="add-button-class">ADD</button></p>
+          <p class="original-ruppes">&#8377 20<button  type="button" class="add-button-class">ADD</button><span class="to-add-remove"> <button class="to-subtract"><img src="-sign.JPG" alt="-" width="22vw" height="33vh"></button><span class="current-quantity"></span> <button class="to-add"><img src="+sign.JPG" alt="+" width="22vw" height="32vh"></button></span></p>
           <p><s class="old-ruppee"></s> </p> 
         </a>
         </div>
